[tool.poetry]
name = "PyLinuxToolkit"
version = "0.0.1"
description = "A gui application for linux administration."
license = "Apache-2.0"
authors = ["JWCompDev <jwcompdev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jwcompdev/PyLinuxToolkit"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
packages = [
    { include = "pylinuxtoolkit" },
    { include = "pystdlib" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jwcompdev/PyLinuxToolkit/issues"
"Source" = "https://github.com/jwcompdev/PyLinuxToolkit"

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "^5.15.6"
introspection = "^1.4"
pexpect = "^4.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
