[metadata]
name = pylinuxtoolkit-jwcompdev
version = 0.0.1
author = JWCompDev
author_email = jwcompdev@gmail.com
description = A gui application for linux administration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwcompdev/PyLinuxToolkit
project_urls =
    Bug Reports = https://github.com/jwcompdev/PyLinuxToolkit/issues
    Source = https://github.com/pypa/sampleproject/
license = GPLv3+
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
package_dir =
    = src
install_requires = pexpect, PyQt5, PyQt5-stubs, introspection
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	pylinuxtoolkit = pylinuxtoolkit.Main:main